--- a/include/themes/vtidc/main.css
+++ b/include/themes/vtidc/main.css
@@ -646,7 +646,7 @@ label {
 	cursor: pointer;
 	padding: 2px;
 	vertical-align: middle;
-	color: lime;
+	/* color: lime; */
 	font-weight: 500;
 	font-size: 14px;
 }
@@ -1666,8 +1666,7 @@ th.sortable {
 
 .cactiFormStart .tableRow:hover, 
 .cactiTable .tableRow:hover{
-	color: #fff !important;
-	background: var(--red) !important;
+	color: var(--red);
 }
 
 .cactiTable .tableRow:hover a{
@@ -2142,7 +2141,7 @@ th:last-child {
 }
 
 tr.selected {
-	color: white;
+	color: white !important;
 	background: rgba(238, 0, 51, 0.9);
 }
 
@@ -2797,7 +2796,11 @@ input[name=__csrf_magic]+.navBarNavigation {
 #graph_view_preview1 .cactiTableTitle span{
 	color: var(--red)
 }
-/* @import url('/notify.css'); */
+/* @import url('./notify.css'); */
+
+#reload4{
+	font-weight: 900;
+}
 
 .notifyjs-corner {
     font-size: 16px;
@@ -2826,4 +2829,118 @@ input[name=__csrf_magic]+.navBarNavigation {
     display: inline-block;
     margin-top: 4px;
     margin-right: 4px;
+}
+
+
+.modal-edit {
+    position: absolute;
+    z-index: 20;
+    top: 0;
+    left: 0;
+    visibility: hidden;
+    width: 100%;
+    height: 100%;
+}
+
+.modal-edit.is-visible {
+    visibility: visible;
+}
+
+.modal-edit-overlay {
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: hsla(0, 0%, 0%, 0.5);
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s linear 0.3s, opacity 0.3s;
+}
+
+.modal-edit.is-visible .modal-edit-overlay {
+  opacity: 1;
+  visibility: visible;
+  transition-delay: 0s;
+}
+
+.modal-edit-wrapper {
+  position: absolute;
+  z-index: 9999;
+  top: 0em;
+  left: 22%;
+  width: 60em;
+  margin-left: -16em;
+  background-color: #fff;
+  box-shadow: 0 0 1.5em hsla(0, 0%, 0%, 0.35);
+}
+
+.modal-edit-transition {
+  transition: all 0.3s 0.12s;
+  transform: translateY(-10%);
+  opacity: 0;
+}
+
+.modal-edit.is-visible .modal-edit-transition {
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.modal-edit-header{
+  padding: 1em;
+}
+
+.modal-edit-content{
+  padding: 1em 2em;
+}
+
+.modal-edit-header {
+  position: relative;
+  background-color: #fff;
+  box-shadow: 0 1px 2px hsla(0, 0%, 0%, 0.06);
+  border-bottom: 1px solid #e8e8e8;
+}
+
+.modal-edit-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0.1em;
+  color: #aaa;
+  background: none;
+  border: 0;
+}
+
+.modal-edit-close:hover {
+  background-color: #e0e0e0;
+}
+
+.modal-edit-heading {
+  font-size: 1.125em;
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.modal-edit-content > *:first-child {
+  margin-top: 0;
+}
+
+.modal-edit-content > *:last-child {
+  margin-bottom: 0;
+}
+
+
+.cactiTable .tableRow:hover svg
+{
+	fill: var(--red);
+}
+
+.cactiTable .selected:hover svg{
+	fill: var(--red);
+}
+
+.cactiTable .selected svg{
+	fill: white !important;
 }
