--- a/include/themes/vtidc/more.css
+++ b/include/themes/vtidc/more.css
@@ -1,49 +1,49 @@
-#reload4{
-	font-weight: 900;
+#reload4 {
+  font-weight: 900;
 }
 
 .notifyjs-corner {
-    font-size: 16px;
-    color: #fff;
-    padding: 10px;
-    border-radius: 10px;
+  font-size: 16px;
+  color: #fff;
+  padding: 10px;
+  border-radius: 10px;
 }
 
-.notifyjs-bootstrap-error{
-	background-color: var(--grey-secondary) !important;
-	color: var(--red) !important;
-	font-weight: 500 !important;
-	background-image: none !important;
-	padding-left: 15px !important;
-	padding-top: 22px !important;
-	border-color: var(--grey) !important;
+.notifyjs-bootstrap-error {
+  background-color: var(--grey-secondary) !important;
+  color: var(--red) !important;
+  font-weight: 500 !important;
+  background-image: none !important;
+  padding-left: 15px !important;
+  padding-top: 22px !important;
+  border-color: var(--grey) !important;
 }
 
-.notifyjs-container::after{
-	content: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' height='20px' viewBox='0 -960 960 960' width='20px' fill='%23EE0033'%3E%3Cpath d='m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z'/%3E%3C/svg%3E");
-	width: 20px;
-    height: 20px;
-    top: 0;
-    right: 0;
-	position: absolute;
-    display: inline-block;
-    margin-top: 4px;
-    margin-right: 4px;
+.notifyjs-container::after {
+  content: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' height='20px' viewBox='0 -960 960 960' width='20px' fill='%23EE0033'%3E%3Cpath d='m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z'/%3E%3C/svg%3E");
+  width: 20px;
+  height: 20px;
+  top: 0;
+  right: 0;
+  position: absolute;
+  display: inline-block;
+  margin-top: 4px;
+  margin-right: 4px;
 }
 
 
 .modal-edit {
-    position: absolute;
-    z-index: 20;
-    top: 0;
-    left: 0;
-    visibility: hidden;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  z-index: 20;
+  top: 0;
+  left: 0;
+  visibility: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 .modal-edit.is-visible {
-    visibility: visible;
+  visibility: visible;
 }
 
 .modal-edit-overlay {
@@ -87,11 +87,11 @@
   opacity: 1;
 }
 
-.modal-edit-header{
+.modal-edit-header {
   padding: 1em;
 }
 
-.modal-edit-content{
+.modal-edit-content {
   padding: 1em 2em;
 }
 
@@ -123,35 +123,97 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.modal-edit-content > *:first-child {
+.modal-edit-content>*:first-child {
   margin-top: 0;
 }
 
-.modal-edit-content > *:last-child {
+.modal-edit-content>*:last-child {
   margin-bottom: 0;
 }
 
 /* added */
 .cactiFormStart .tableRow:hover,
-.cactiTable .tableRow:hover{
-	background-color: rgba(242, 242, 242, 0.9) !important;
-	color: var(--red) !important;
+.cactiTable .tableRow:hover {
+  background-color: rgba(242, 242, 242, 0.9) !important;
+  color: var(--red) !important;
 }
 
-.cactiTable .selected:hover{
-	background-color: var(--red) !important;
-	color: white !important;
+.cactiTable .selected:hover {
+  background-color: var(--red) !important;
+  color: white !important;
 }
 
 .cactiTable .selected svg,
-.cactiTable .selected:hover svg{
-	fill: white !important;
+.cactiTable .selected:hover svg {
+  fill: white !important;
 }
 
-.cactiTable .tableRow:hover a:not(.jstree-anchor){
-	color: var(--red) !important;
+.cactiTable .tableRow:hover a:not(.jstree-anchor) {
+  color: var(--red) !important;
 }
 
-.cactiTable .selected:hover a{
-	color: white !important;
+.cactiTable .selected:hover a {
+  color: white !important;
 }
+
+
+.lds-ellipsis,
+.lds-ellipsis div {
+  box-sizing: border-box;
+}
+.lds-ellipsis {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-ellipsis div {
+  position: absolute;
+  top: 100%;
+  width: 6.33333px;
+  height: 6.33333px;
+  border-radius: 50%;
+  background: #EE0033;
+  animation-timing-function: cubic-bezier(0, 1, 1, 0);
+}
+.lds-ellipsis div:nth-child(1) {
+  left: 8px;
+  animation: lds-ellipsis1 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(2) {
+  left: 8px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(3) {
+  left: 32px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(4) {
+  left: 56px;
+  animation: lds-ellipsis3 0.6s infinite;
+}
+@keyframes lds-ellipsis1 {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes lds-ellipsis3 {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+@keyframes lds-ellipsis2 {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(24px, 0);
+  }
+}
+
